Improvements related to metadata values.
- store largest value last so it may not be read if not needed (LUCENE-6898)
- replace use of NO_MORE_ORDS with docValuesCount()